<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.huaanhhong.chatvn.LoginActivity">

    <ScrollView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

     <LinearLayout
         android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/text_sigup"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorrong"
                    android:hint="@string/pemail"
                    android:paddingLeft="25dp"
                    android:paddingBottom="8dp"/>
            </android.support.design.widget.TextInputLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/text_nguoc_siguup"
            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_sigup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorrong"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="25dp"
                    android:paddingBottom="8dp"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edt_sigup_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorrong"
                    android:inputType="textPassword"
                    android:hint="@string/confirmpass"
                    android:paddingLeft="25dp"
                    android:paddingBottom="8dp"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_sigup"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edt_login_sum"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="11sp"
            />
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/btn_signin"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edt_login_sum"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="11sp"
        />
    <com.google.android.gms.common.SignInButton
        android:layout_marginTop="20dp"
        android:id="@+id/btn_logingoogle"
        android:layout_width="250dp"
        android:layout_height="40dp">

    </com.google.android.gms.common.SignInButton>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:textSize="11sp"
        android:textColor="@color/textfacebook"
        android:gravity="center"
        />
         <com.facebook.login.widget.LoginButton
             android:layout_marginTop="10dp"
             android:id="@+id/btn_loginfacebook"
             android:layout_width="250dp"
             android:layout_height="wrap_content" />

    </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></FrameLayout>

</LinearLayout>
